DigicielFull/force-app/main/default/objects/amc__Issue__c/amc__Issue__c.object-meta.xml
<CustomObject>
    <label>Issue</label>
    <nameField>
        <displayFormat>ISS-{000000}</displayFormat>
        <label>Issue Log ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Issues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>