DigicielFull/force-app/main/default/objects/amc__Issue__c/fields/amc__Action__c.field-meta.xml
<CustomField>
    <fullName>amc__Action__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Identifies the Action this Issue relates to</inlineHelpText>
    <label>Action</label>
    <referenceTo>amc__Action__c</referenceTo>
    <relationshipLabel>Issues</relationshipLabel>
    <relationshipName>Issues</relationshipName>
    <type>Lookup</type>
</CustomField>