DigicielFull/force-app/main/default/objects/amc__Issue__c/fields/amc__Category__c.field-meta.xml
<CustomField>
    <fullName>amc__Category__c</fullName>
    <description>Identifies the Issue Category this Issue relates to.</description>
    <inlineHelpText>Identifies the Issue Category this Issue relates to.</inlineHelpText>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bug</fullName>
            </value>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Project Management</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>UAT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>