DigicielFull/force-app/main/default/objects/amc__Issue__c/fields/amc__Exclude_from_Client_Page__c.field-meta.xml
<CustomField>
    <fullName>amc__Exclude_from_Client_Page__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Identifies if this Issue should be excluded from the Client Overview Page</inlineHelpText>
    <label>Exclude from Client Page</label>
    <type>Checkbox</type>
</CustomField>