DigicielFull/force-app/main/default/objects/amc__Issue__c/fields/amc__Impact__c.field-meta.xml
<CustomField>
    <fullName>amc__Impact__c</fullName>
    <description>Identifies the impact this Issue is having on the Project</description>
    <inlineHelpText>Identifies the impact this Issue is having on the Project</inlineHelpText>
    <label>Impact</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>