DigicielFull/force-app/main/default/objects/amc__Issue__c/fields/amc__Impact_Notes__c.field-meta.xml
<CustomField>
    <fullName>amc__Impact_Notes__c</fullName>
    <description>Identifies the detailed notes on the impact</description>
    <inlineHelpText>Identifies the detailed notes on the impact</inlineHelpText>
    <label>Impact Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>