DigicielFull/force-app/main/default/objects/amc__Issue__c/fields/amc__Issue_Name__c.field-meta.xml
<CustomField>
    <fullName>amc__Issue_Name__c</fullName>
    <description>A descriptive name of the Issue</description>
    <inlineHelpText>A descriptive name of the Issue</inlineHelpText>
    <label>Issue Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>