DigicielFull/force-app/main/default/objects/amc__Issue__c/fields/amc__Issue_Owner__c.field-meta.xml
<CustomField>
    <fullName>amc__Issue_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Identifies the person that will be responsible for resolving this issue</description>
    <inlineHelpText>Identifies the person that will be responsible for resolving this issue</inlineHelpText>
    <label>Issue Owner</label>
    <referenceTo>amc__Role__c</referenceTo>
    <relationshipLabel>Issues</relationshipLabel>
    <relationshipName>Issues</relationshipName>
    <type>Lookup</type>
</CustomField>