DigicielFull/force-app/main/default/objects/amc__Issue__c/fields/amc__Milestone_Name__c.field-meta.xml
<CustomField>
    <fullName>amc__Milestone_Name__c</fullName>
    <formula>amc__Action__r.amc__Milestone__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula Field: References the Milestone Name that the Action this Issue relate to is part of</inlineHelpText>
    <label>Milestone Name</label>
    <type>Text</type>
</CustomField>