DigicielFull/force-app/main/default/objects/amc__Issue__c/fields/amc__Project__c.field-meta.xml
<CustomField>
    <fullName>amc__Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Identifies the Project this Issue relates to</description>
    <inlineHelpText>Identifies the Project this Issue relates to</inlineHelpText>
    <label>Project</label>
    <referenceTo>amc__Project__c</referenceTo>
    <relationshipLabel>Issues</relationshipLabel>
    <relationshipName>Issues</relationshipName>
    <type>Lookup</type>
</CustomField>