DigicielFull/force-app/main/default/objects/amc__Issue__c/fields/amc__Resolution_Notes__c.field-meta.xml
<CustomField>
    <fullName>amc__Resolution_Notes__c</fullName>
    <description>Identifies the detailed notes on how this Issue was resolved</description>
    <inlineHelpText>Identifies the detailed notes on how this Issue was resolved</inlineHelpText>
    <label>Resolution Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>