DigicielFull/force-app/main/default/objects/amc__Issue__c/fields/amc__Risk__c.field-meta.xml
<CustomField>
    <fullName>amc__Risk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Identifies the Risk this Issue relates to</inlineHelpText>
    <label>Risk</label>
    <referenceTo>amc__Risk__c</referenceTo>
    <relationshipLabel>Issues</relationshipLabel>
    <relationshipName>Issues</relationshipName>
    <type>Lookup</type>
</CustomField>