DigicielFull/force-app/main/default/objects/amc__Issue__c/fields/amc__Status__c.field-meta.xml
<CustomField>
    <fullName>amc__Status__c</fullName>
    <description>Identifies the current status of the Issue</description>
    <inlineHelpText>Identifies the current status of the Issue</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Awaiting Review</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Open</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>