DigicielFull/force-app/main/default/objects/amc__Issue__c/validationRules/amc__Resolved_Date_Should_be_greater.validationRule-meta.xml
<ValidationRule>
    <fullName>amc__Resolved_Date_Should_be_greater</fullName>
    <active>true</active>
    <errorConditionFormula>amc__Date_Resolved__c  &lt;  amc__Date_Identified__c</errorConditionFormula>
    <errorDisplayField>amc__Date_Resolved__c</errorDisplayField>
    <errorMessage>Date Resolved should be greater than Date Identified.</errorMessage>
</ValidationRule>